tests/a/tests/integrity/fail/loop/for.1.stderr
error: expected {root}{root}, found {root}{*}
  --> tests/integrity/fail/loop/for.1.rs:11:13
   |
11 |         x = 1;
   |             ^
